syntax="proto3";

package addition;
option go_package = "github.com/oriastanjung/stellar/proto/auth";

message VerifyUserRequest {
    string token=1;
}

message VerifyUserResponse {
    string message=1;
}


message RequestForgetPasswordRequest {
    string email=1;
}

message RequestForgetPasswordResponse {
    string message=1;
}

message ResetPasswordByTokenRequest{
    string token=1;
    string password=2;
}

message ResetPasswordByTokenResponse{
    string message=1;
}

message LoginGoogleResponse{
    string url=1;
}

message LoginGoogleRequest{
    string email=1;
    string username=2;
    string picture_url=3;
}